[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

# ── Project metadata ──────────────────────────────────────────────────────────

[project]
name = "agentargus"
version = "0.0.0"
description = "Production-grade evaluation, observability, and reliability for AI agents"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
    { name = "Mohd Arbaaz Siddiqui", email = "arbaazcode@gmail.com" }
]
keywords = [
    "llm",
    "agents",
    "evaluation",
    "observability",
    "reliability",
    "langgraph",
    "opentelemetry",
    "rag",
]
classifiers = [
    "Development Status :: 1 - Planning",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

# Runtime dependencies (empty for v0.0.0 stub — fill these in during Week 2+)
dependencies = []

# Optional dependency groups
[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=4.1",
    "pytest-asyncio>=0.23",
    "ruff>=0.5",
    "mypy>=1.10",
    "build>=1.0",
    "twine>=5.0",
]
docs = [
    "pdoc>=14.0",
]

# ── Project URLs ──────────────────────────────────────────────────────────────

[project.urls]
Repository = "https://github.com/mohdcodes/AgentArgus"
Issues     = "https://github.com/mohdcodes/AgentArgus/issues"

# ── Hatchling build config ────────────────────────────────────────────────────

[tool.hatch.build.targets.wheel]
packages = ["agentargus"]

# ── Ruff (linter + formatter — replaces black, flake8, isort) ────────────────

[tool.ruff]
line-length    = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP"]
ignore = ["E501"]

[tool.ruff.lint.isort]
known-first-party = ["agentargus"]

# ── Pytest ────────────────────────────────────────────────────────────────────

[tool.pytest.ini_options]
minversion   = "8.0"
testpaths    = ["tests"]
python_files = ["test_*.py"]
addopts      = "-v --tb=short --cov=agentargus"
asyncio_mode = "auto"
filterwarnings = [
    "ignore::DeprecationWarning",
]

# ── Coverage ──────────────────────────────────────────────────────────────────

[tool.coverage.run]
source = ["agentargus"]
omit   = ["*/tests/*", "*/test_*.py"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
]
precision    = 2
fail_under   = 80

# ── Mypy ──────────────────────────────────────────────────────────────────────

[tool.mypy]
python_version        = "3.10"
warn_return_any       = true
warn_unused_configs   = true
ignore_missing_imports = true